fix issue on safari

--- a/src/scss/components/bef-after.scss
+++ b/src/scss/components/bef-after.scss
@@ -64,49 +64,66 @@ before-after-slider {
             border-bottom-left-radius: inherit;
         }
 
-        .slider {
-            position: absolute;
+        input[type='range'] {
             -webkit-appearance: none;
-            appearance: none;
             width: 100%;
+            border-radius: 8px;
+            height: 7px;
+            border: 1px solid #bdc3c7;
+            background-color: #bdc3c7;
+            outline: none !important;
+            outline: 0;
+            -webkit-tap-highlight-color: none;
             height: 100%;
+            z-index: 999;
+            position: absolute;
+            opacity: 0;
+          }
+          input[type='range']::focus {
+            background-color: darkblue;
+          }
+          input[type='range']::-webkit-slider-thumb {
+            -webkit-appearance: none;
+            background-color: #ecf0f1;
+            border-radius: 50%;
+            border: 1px solid #bdc3c7;
+            width: 20px;
+            height: 20px;
+            cursor: pointer;
+          }
+          /*Mozilla*/
+          .firefox input[type='range']::-moz-range-track {
+            border-radius: 50%;
+            height: 10px;
+            background-color: #fff;
+          }
+          .firefox input[type='range']::-moz-range-thumb {
+            background-color: #ecf0f1;
+            border-radius: 50%;
+            border: 1px solid #bdc3c7;
+            width: 20px;
+            height: 20px;
+            cursor: pointer;
+          }
+          /*Microsoft*/
+          input[type="range"]::-ms-fill-lower,
+          input[type="range"]::-ms-fill-upper {
             background: transparent;
-            outline: none;
-            margin: 0;
-            transition: all .2s;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            z-index: 11;
-            @media only screen and (max-width: 600px) {
-                display: initial;
-                display: initial;
-                justify-content: initial;
-                align-items: initial;
-            
-            }
-            cursor: ew-resize;
-            &:hover {
-                background: rgba(242, 242, 242, .1);
-            }
-
-            &::-webkit-slider-thumb {
-                -webkit-appearance: none;
-                appearance: none;
-                width: 6px;
-                height: 100%;
-                background: white;
-                cursor: ew-resize;
-            }
-
-            &::-moz-range-thumb {
-                width: 6px;
-                height: 100%;
-                background: white;
-                cursor: ew-resize;
-            }
-        }
-        
+          }
+          input[type="range"]::-ms-track {
+              border-radius: 8px;
+            height: 7px;
+            border: 1px solid #bdc3c7;
+            background-color: #fff;
+          }
+          input[type="range"]::-ms-thumb {
+            background-color: #ecf0f1;
+            border: 1px solid #bdc3c7;
+            width: 20px;
+            height: 20px;
+            border-radius: 10px;
+            cursor: pointer;
+          }
         .slider-button {
             pointer-events: none;
             position: absolute;
